--- a/static/css/_panel.scss
+++ b/static/css/_panel.scss
@@ -2,7 +2,6 @@
     width: 800px;
     margin-top: -317px;
     margin-left: -400px;
-    z-index: 1001;
 }
 
 #fileBrowser {
@@ -27,7 +26,7 @@
     left: 50%;
     border: 1px solid $brand-blue;
     border-top-color: $toolbox-btn-active;
-    z-index: 1002;
+    z-index: 1;
 
     .panelExitButton p {
         color: white;
