--- a/static/css/_toolbox.scss
+++ b/static/css/_toolbox.scss
@@ -1,6 +1,5 @@
 #toolbox {
     position: absolute;
-    z-index: 100;
     left: 0;
     width: 8em;
     text-align: center;
